fix overwrapping menu on login page change actions button to red change colors of some icons Make sidebar black Change  label color: from orange to red

--- a/src/components/Dashboard/WelcomeSection/index.scss
+++ b/src/components/Dashboard/WelcomeSection/index.scss
@@ -44,7 +44,7 @@
     margin-left: auto;
     button {
       cursor: pointer;
-      background: #282b4e;
+      background: #323232;
       color: #d2d3e2e7;
       font-size: 12px;
       font-size: 14px;
@@ -65,7 +65,7 @@
       }
     }
     button.bg-primary {
-      background: #da6138 !important;
+      background: #D0342F !important;
       color: #ffffffce !important;
     }
   }
