--- a/src/components/Login/LoginForm/style.scss
+++ b/src/components/Login/LoginForm/style.scss
@@ -1,12 +1,9 @@
-.login-form-ui {
-  // z-index: 3;
-}
 .submit-button {
   font-size: 18px;
   color: white;
   margin: 6px 0;
   button {
-    background: #343657 !important;
+    background: #232323 !important;
     border-radius: 0 !important;
     padding: 16px 0 !important;
   }
