--- a/src/components/Stores/MyStores/EmptyCard/EmptyCard.scss
+++ b/src/components/Stores/MyStores/EmptyCard/EmptyCard.scss
@@ -12,7 +12,7 @@
   }
   button {
     cursor: pointer;
-    background: #da6138;
+    background: #D0342F;
     font-weight: 500;
     color: #ffffff;
     font-size: 16px;
