--- a/src/components/common/DashboardLayout/NavBar/NavBar.scss
+++ b/src/components/common/DashboardLayout/NavBar/NavBar.scss
@@ -36,7 +36,7 @@
     font-weight: bold;
     color: #ffffff;
     border-radius: 4px;
-    background: #da6138
+    background: #D0342F
   }
   .btns-header-actions {
     margin: 12px 0;
